# RuneBornV2

./: .gitignore  .gitmodules  AnimationComponent.h  CMakeLists.txt  Components.h  ECS.h  Game.cpp  Game.h  Main.cpp  MovementComponent.h  README.md  RuneBorn.sln  RuneBorn.vcxproj  RuneBorn.vcxproj.filters  TransformComponent.h  Vector2D.cpp  Vector2D.h  tinyxml2.cpp
RuneBorn/x64/Debug/: RuneBorn.exe.recipe  RuneBorn.ilk  vc143.idb
RuneBorn/x64/Debug/RuneBorn.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  RuneBorn.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
assets/Backgrounds/Maps/: House.tmx  Spawn.tmx  map1.tmx  map2.tmx
assets/Backgrounds/Tiles/: Pipes.tsx  TilesetDesert.tsx  TilesetDungeon.tsx  TilesetElement.tsx  TilesetField.tsx  TilesetFloor.tsx  TilesetFloorB.tsx  TilesetFloorDetail.tsx  TilesetHole.tsx  TilesetHouse.tsx  TilesetLogic.tsx  TilesetNature.tsx  TilesetRelief.tsx  TilesetReliefDetail.tsx  TilesetTowers.tsx  TilesetVillageAbandoned.tsx  TilesetWater.tsx
assets/Datas/: sort.json  spells.json
src/Components/: DirectionalAnimationComponent.h  PlayerComponent.cpp  PlayerComponent.h
src/Managers/: AudioManager.cpp  AudioManager.h  UIThemeManager.cpp  UIThemeManager.h
src/Spells/: SpellDataBase.cpp  SpellDataBase.h  SpellEffect.h  SpellFactory.cpp  SpellFactory.h  SpellPattern.h  SpellRecognizer.cpp  SpellRecognizer.h
src/Spells/Effects/: FireBallEffect.cpp  FireBallEffect.h
src/Systems/: DirectionalAnimationSystem.cpp  DirectionalAnimationSystem.h  PlayerInputSystem.cpp  PlayerInputSystem.h
src/UI/: CreditsMenu.cpp  CreditsMenu.h  MainMenu.cpp  MainMenu.h  OptionsMenu.cpp  OptionsMenu.h  PauseMenu.cpp  PauseMenu.h  RunesMenu.cpp  RunesMenu.h
